--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,67 @@
 .App {
   text-align: center;
+  background-color: #f0f2f5;
+  min-height: 100%;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+/* HEADER */
+
+.header {
+	padding: 20px;
+	display: flex;
+	background-color: #00a5af;
+	margin-bottom: 20px;
+	box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.15), 0 2px 9px 0 rgba(0, 0, 0, 0.1);
+}
+
+.app-name {
+	color: #fff;
+	font-size: 2rem;
+	text-transform: uppercase;
+	border: solid 2px #fff;
+	padding: 3px 10px;
+}
+
+/* INPUT FORM */
+
+.input-form {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 98%;
+	background-color: #fff;
+	margin: 0 auto;
+	padding: 50px 5%;
+	box-sizing: border-box;
+	box-shadow: 4px 3px 6px rgba(0, 0, 0, 0.15);
+}
+
+.input-form h1 {
+	font-size: 2.5rem;
+	font-weight: 600;
+	color: #6c717a;
+	margin-bottom: 40px;
+}
+
+.input-form input, .input-form button {
+	width: 100%;
+}
+
+.input-form input {
+	font-size: 2rem;
+	margin-bottom: 30px;
+	padding: 10px 15px;
+	box-sizing: border-box;
+}
+
+.input-form button {
+	font-size: 2rem;
+	background-color: #00c5d1;
+	color: #fff;
+	padding: 10px;
+	border: none;
 }
